--- a/src/styles/TextHighlight.module.css
+++ b/src/styles/TextHighlight.module.css
@@ -1,16 +1,20 @@
-.main {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.redButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-weight: bold;
+  transition: 0.3s;
+  background-color: #d21919;
+  border: none;
 }
 
-.textarea {
-  border: 1px solid black;
-  padding: 10px;
-  width: 500px;
-}
-
-.textarea p {
-  padding: 0;
-  margin: 0;
+.redButton:hover {
+  opacity: 0.7;
 }
